5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1712_2499.log
== TEST (2019-05-13 15:03:17) 
-- CODE:
from math import*

k=int(input("Numero natural: "))

c=0
e=0

while(c<k)
	e=e+(1/fatroial(c))
	c=c+1
print(round(e,8))
-- ERROR:
File "XXXX", line 8
    while(c<k)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:03:24) 
-- CODE:
from math import*

k=int(input("Numero natural: "))

c=0
e=0

while(c<k):
	e=e+(1/fatroial(c))
	c=c+1
print(round(e,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e=e+(1/fatroial(c))
NameError: name 'fatroial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:03:55) 
-- CODE:
from math import*

k=int(input("Numero natural: "))

c=0
e=0

while(c<k):
	e=c+(1/fatroial(c))
	c=c+1
print(round(e,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e=c+(1/fatroial(c))
NameError: name 'fatroial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:05:18) 
-- CODE:
from math import*

k=int(input("Numero natural: "))

c=0
e=0

while(c<k):
	e=e+(1/factorial(c))
	c=c+1
print(round(e,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:05:21) 
-- CODE:
from math import*

k=int(input("Numero natural: "))

c=0
e=0

while(c<k):
	e=e+(1/factorial(c))
	c=c+1
print(round(e,8))
-- EXECUTION TIME:
0.133509
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
